--- a/DAY14(HTML&CSS)/HTML/htmlQ2.html
+++ b/DAY14(HTML&CSS)/HTML/htmlQ2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<table>
+<table border="1" cellpadding="10">
   <thead>
     <tr>
       <th colspan="4">Web Fundation Exam Results</th>
