--- a/DAY14(HTML&CSS)/HTML/htmlQ5.html
+++ b/DAY14(HTML&CSS)/HTML/htmlQ5.html
@@ -23,6 +23,10 @@
         width: 100%;
         height: 100%;
         border: 1px solid black;
+        color: blue;
+      }
+      .btn-light-pink {
+        background-color: #ffc0cb;
       }
     </style>
   </head>
@@ -31,7 +35,10 @@
       <table class="table double-border-table">
         <tr>
           <td colspan="4">
-            <button onclick="window.location.href='https://antra.net/'">
+            <button
+              class="btn-light-pink"
+              onclick="window.location.href='https://antra.net/'"
+            >
               Antra Life
             </button>
           </td>
@@ -103,7 +110,7 @@
         <tr>
           <td colspan="3">
             <button onclick="window.location.href='https://antra.net/'">
-              Beer >
+              Beer >>>
             </button>
           </td>
           <td colspan="1">
